--- a/tent/cfgs/eata.yaml
+++ b/tent/cfgs/eata.yaml
@@ -2,15 +2,16 @@ MODEL:
   ADAPTATION: eata
   ARCH: Standard
 TEST:
-  BATCH_SIZE: 200
+  BATCH_SIZE: 64
 CORRUPTION:
   DATASET: cifar10
   SEVERITY:
-    - 5
-    - 4
-    - 3
-    - 2
     - 1
+    - 2
+    - 3
+    - 4
+    - 5
+    
   TYPE:
     - gaussian_noise
     - shot_noise
@@ -27,3 +28,22 @@ CORRUPTION:
     - elastic_transform
     - pixelate
     - jpeg_compression
+
+    # - jpeg_compression
+    # - pixelate
+    # - elastic_transform
+    # - contrast
+    # - brightness
+    # - fog
+    # - frost
+    # - snow
+    # - zoom_blur
+    # - motion_blur
+    # - glass_blur
+    # - defocus_blur
+    # - impulse_noise
+    # - shot_noise
+    # - gaussian_noise
+
+OPTIM:
+  LR: 0.005
